javascript is finished done , the project is finished

--- a/index.html
+++ b/index.html
@@ -10,19 +10,12 @@
 <body>
     <div class="container">
         <h2>Real Time Character Counter</h2>
-        <textarea class="textarea" id="textarea"
-         placeholder="Please write your text here" maxlength="50">
-        </textarea>
+        <textarea class="textarea" id="textarea" placeholder="Please write your text here" maxlength="60"></textarea>
         <div class="counter-container">
-            <p>Total Characters : 
-                <span class="total-counter" id="total-counter">
-                30
-                </span>
+            <p>Total Characters: <span class="total-counter" id="total-counter"></span>
             </p>
             <p>Total Characters : 
-                <span class="rem-counter" id="rem-counter">
-                30
-                </span>
+                <span class="rem-counter" id="rem-counter"></span> 
             </p>
         </div>
     </div>
